--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -307,6 +307,12 @@
     -webkit-touch-callout: none;
     pointer-events: none;
     cursor: default;
+    /* Additional iOS protections */
+    -webkit-user-select: none;  /* Safari-specific */
+    -khtml-user-select: none;   /* Old browsers */
+    -moz-user-select: none;     /* Firefox */
+    -ms-user-select: none;      /* Internet Explorer */
+    -webkit-tap-highlight-color: transparent;
 }
 
 /* Mobile Menu Styles */
@@ -534,4 +540,14 @@
     #main h2 {
         font-size: 1.3em;
     }
+}
+
+/* Prevent context menu on image container */
+.image.avatar {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
