--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -530,14 +530,14 @@
 }
 
 /* Adjust section heading sizes */
-#main h2 {
+#about h2, #skills h2, #projects h2, #contact h2 {
     font-size: 1.5em;
     margin-bottom: 1em;
 }
 
 /* Responsive adjustment */
 @media screen and (max-width: 736px) {
-    #main h2 {
+    #about h2, #skills h2, #projects h2, #contact h2 {
         font-size: 1.3em;
     }
 }
