--- a/assets/css/certifications.css
+++ b/assets/css/certifications.css
@@ -301,9 +301,10 @@
 }
 
 .cert-tasks li strong {
-    color: #4acaa8;
+    color: #222;
     display: block;
     margin-bottom: 0.5em;
+    font-weight: 600;
 }
 
 .cert-tasks li span {
@@ -377,9 +378,9 @@
     top: 0.001em;
     float: right;
     right: 0.001em;
-    width: 32px;
-    height: 32px;
-    background: rgba(0, 0, 0, 0.1);
+    width: 40px;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.15);
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -389,11 +390,15 @@
     color: #2c3e50;
     z-index: 10000;
     margin: -1.5em -1.5em 1em 1em;
+    font-size: 1.6em;
+    line-height: 1;
+    font-weight: 300;
 }
 
 #certification-modal .close-modal:hover {
-    background: rgba(74, 202, 168, 0.2);
+    background: rgba(74, 202, 168, 0.25);
     transform: rotate(90deg);
+    color: #000;
 }
 
 /* Responsive Adjustments */
@@ -432,6 +437,9 @@
     }
 
     #certification-modal .close-modal {
+        width: 36px;
+        height: 36px;
+        font-size: 1.4em;
         margin: -1em -1em 0.5em 0.5em;
     }
 }
